# unified-generations

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/doubao-agent-plan/: Cargo.toml
crates/doubao-agent-plan-cli/: Cargo.toml
crates/doubao-agent-plan-cli/src/: main.rs
crates/doubao-agent-plan-server/: Cargo.toml  build.rs
crates/doubao-agent-plan-server/proto/doubao/agentplan/v1/: agent_plan.proto
crates/doubao-agent-plan-server/src/: main.rs
crates/doubao-agent-plan/src/: client.rs  config_file.rs  error.rs  lib.rs  llm.rs  tts.rs  voices.rs
crates/unified-generations/: Cargo.toml
crates/unified-generations-cli/: Cargo.toml
crates/unified-generations-cli/src/: main.rs
crates/unified-generations-server/: Cargo.toml
crates/unified-generations-server/proto/doubao/agentplan/v1/: agent_plan.proto
crates/unified-generations-server/src/: main.rs
crates/unified-generations/src/: error.rs  image.rs  lib.rs  minimax.rs  tts.rs
docs/: AGENT_HANDOFF.md  API.md  MANIFEST.md  SETUP.md
