[workspace]
resolver = "3"
members = [
    "crates/unified-generations",
    "crates/unified-generations-server",
    "crates/unified-generations-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shuozeli/unified-generations"
authors = ["Shuozeli <102564117+Shuozeli@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
prost = "0.13"
protoc-bin-vendored = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tonic = "0.12"
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

unified-generations = { path = "crates/unified-generations" }
