[package]
name = "doubao-agent-plan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command line client for Volcengine Doubao Ark Agent Plan APIs."

[[bin]]
name = "doubao-agent-plan"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
doubao-agent-plan.workspace = true
serde_json.workspace = true
tokio.workspace = true
