[package]
name = "unified-generations-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command line client for Volcengine Doubao Ark Agent Plan APIs."

[[bin]]
name = "unified-generations"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
unified-generations.workspace = true
serde_json.workspace = true
tokio.workspace = true
