[package]
name = "unified-generations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust client SDK for Volcengine Doubao Ark Agent Plan LLM, image, and TTS APIs."

[dependencies]
base64.workspace = true
bytes.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
